Apply software model tags
